--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shubham Motwani | SDET & QA Automation Expert</title>
+    <title>Shubham Motwani |QA Automation Engineer</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -722,7 +722,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Shubham Motwani<br>SDET & QA Automation Expert</h1>
+                    <h1>Shubham Motwani<br>QA Automation Engineer</h1>
                     <h2>Building robust test frameworks that ensure software quality and accelerate release cycles.</h2>
                     <a href="#portfolio" class="cta-button">View My Work</a>
                 </div>
@@ -1021,12 +1021,12 @@
                             <span class="project-tag">Pytest</span>
                             <span class="project-tag">Allure Reports</span>
                         </div>
-                        <div style="margin-top: 1rem;">
+                        <!-- <div style="margin-top: 1rem;">
                             <a href="https://github.com/shubhamm025/ecommerce-automation-framework" target="_blank"
                                 class="github-link">
                                 <i class="fab fa-github"></i> View Code
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="project-card">
@@ -1034,7 +1034,7 @@
                     <i class="fas fa-exchange-alt"></i>
                 </div>
                 <div class="project-content">
-                    <h3>API Testing Suite for Financial Services</h3>
+                    <h3>API Testing Suite</h3>
                     <p>Built a robust API automation framework for a financial services application, ensuring secure and
                         reliable transaction processing across multiple endpoints.</p>
                     <ul class="project-achievements">
@@ -1048,15 +1048,15 @@
                         <span class="project-tag">TestNG</span>
                         <span class="project-tag">Jenkins</span>
                     </div>
-                    <div style="margin-top: 1rem;">
+                    <!-- <div style="margin-top: 1rem;">
                         <a href="https://github.com/shubhamm025/api-testing-framework" target="_blank"
                             class="github-link">
                             <i class="fab fa-github"></i> View Code
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
-            <div class="project-card">
+            <!-- <div class="project-card">
                 <div class="project-image">
                     <i class="fas fa-robot"></i>
                 </div>
@@ -1081,13 +1081,13 @@
                             <i class="fab fa-github"></i> View Code
                         </a>
                     </div>
-                </div>
-            </div>
-            <div class="project-card">
+                </div> -->
+            <!-- </div> -->
+            <!-- <div class="project-card">
                 <div class="project-image">
                     <i class="fas fa-file-excel"></i>
-                </div>
-                <div class="project-content">
+                </div> -->
+                <!-- <div class="project-content">
                     <h3>Data-Driven Test Automation Framework Utility</h3>
                     <p>A reusable, robust Python utility class designed to simplify data-driven testing. It
                         seamlessly reads test data from Excel (.xlsx) files, providing a clean interface for
@@ -1110,8 +1110,8 @@
                             <i class="fab fa-github"></i> View Code
                         </a>
                     </div>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
         </div>
         </div>
     </section>
@@ -1200,7 +1200,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Shubham Motwani. All rights reserved. | SDET & QA Automation Expert</p>
+            <p>&copy; 2025 Shubham Motwani. All rights reserved. | QA Automation Engineer</p>
         </div>
     </footer>
 
